Fix footer overlapping main content.

--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+.container {
+    margin-bottom: 20px;
+}
 .highlight {
     color: #0ca3cd;
 }
